--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,17 @@
 [versions]
-agp = "8.12.1"
-kotlin = "2.2.10"
+agp = "8.12.2"
+kotlin = "2.2.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
-composeBom = "2025.08.01"
-navigationCompose = "2.9.3"
+activityCompose = "1.11.0"
+composeBom = "2025.09.00"
+navigationCompose = "2.9.4"
+retrofit = "3.0.0"
+gson = "2.13.2"
+converterGson = "3.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,6 +29,9 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose = {module = "androidx.navigation:navigation-compose", name = "navigation-compose", version.ref = "navigationCompose"}
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 
 [plugins]
